Fixed mobile layout issues for Clock and Pomodoro widgets.

--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -5,7 +5,7 @@
     justify-content: space-evenly;
     height: 100%;
     width: 100%;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .clock {
@@ -40,7 +40,7 @@
 .minute-position {
     background-color: rgba(0, 0, 0, 0.4);
     height: 1px;
-    width: .5em;
+    width: 0.5em;
     margin: 0;
     transform-origin: left;
 }
@@ -48,7 +48,7 @@
 .minute-position:nth-of-type(5n) {
     background-color: rgba(0, 0, 0, 0.7);
     height: 1.6px;
-    width: .8em;
+    width: 0.8em;
 }
 
 .hand {
@@ -107,7 +107,9 @@
     transform: translate(-50%, -50%);
 }
 
-.date-info { font-size: 1.2rem; }
+.date-info {
+    font-size: 1.2rem;
+}
 
 /* =================== */
 
@@ -116,7 +118,7 @@
 @media (max-height: 476px) and (orientation: landscape) {
     .clock-widget {
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     .clock {
@@ -126,11 +128,15 @@
 }
 
 @media (min-width: 1080px) {
-        .clock { font-size: 1.5vw; }
+    .clock {
+        font-size: 1.5vw;
+    }
 }
 
 @media (min-width: 1440px) {
-    .clock { font-size: 1.6vw; }
+    .clock {
+        font-size: 1.6vw;
+    }
 }
 
 /* =================== */
